# chip8_cpp

./: .gitignore  CMakeLists.txt
.github/workflows/: c-cpp.yml
src/app/: CMakeLists.txt  RenderSurface.cpp  RenderSurface.h  chip8_manager.cpp  chip8_manager.h  main.cpp
src/app/cpp/: Chip8Worker.cpp  Chip8Worker.h  RenderSurface.cpp  RenderSurface.h  main.cpp
src/app/qml/: main.qml
src/app_sdl/: CMakeLists.txt
src/app_sdl/cpp/: main.cpp
src/lib/: CMakeLists.txt  chip8_emu.cpp  chip8_emu.h
src/test/: CMakeLists.txt  chip8_emu_test.cpp
src/test/include/: utils.h
